--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <label for="amount">Amount (Income = XX , spending = -XX)</label>
                     <input type="number" id="amount" placeholder="Enter Amount...">
                 </div>
-                <button class="btn">All Transactions</button>
+                <button class="btn">Submit Transaction</button>
             </form>
 
 
